image alignment bug fix in WP 5.5

--- a/styles/editor-style.css
+++ b/styles/editor-style.css
@@ -25,7 +25,9 @@ h2 {
   /* 24px */
 }
 
-img figcaption,
+.wp-caption-text,
+.gallery-caption,
+.wp-caption-dd, img figcaption,
 .alignright figcaption,
 .alignleft figcaption,
 .aligncenter figcaption,
@@ -35,9 +37,7 @@ img figcaption,
 .size-large figcaption,
 .size-medium figcaption,
 .size-thumbnail figcaption,
-.wp-block-image figcaption, .wp-caption-text,
-.gallery-caption,
-.wp-caption-dd {
+.wp-block-image figcaption {
   font-size: 0.75em;
   /* 12px / 16px */
   line-height: 1.5;
@@ -78,7 +78,7 @@ a {
   transition: border-color 0.2s;
 }
 a:after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -1px;
   left: 0;
@@ -198,7 +198,7 @@ th {
 
 /* Images */
 .wp-block-image {
-  margin: 0;
+  margin: 0 auto;
 }
 
 .alignleft {
@@ -299,8 +299,8 @@ img figcaption,
   font-family: "Open Sans", sans-serif;
 }
 
-.wp-block[data-align="wide"],
-.wp-block[data-align="full"] {
+.wp-block[data-align=wide],
+.wp-block[data-align=full] {
   max-width: none;
 }
 
@@ -328,3 +328,5 @@ img figcaption,
 .has-extra-large-font-size {
   font-size: 28px;
 }
+
+/*# sourceMappingURL=editor-style.css.map */
